--- a/AmbrosiaTest/AmbrosiaTest/Cmp/jsptishowhelptest.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/jsptishowhelptest.cmp
@@ -8,13 +8,12 @@
   -sin|--serverInstanceName=   : [Client] The name of the instance that's acting in the 'Server' role for the test; only required when --role is 'Client'
   -bpr|--bytesPerRound=        : [Client] The total number of message payload bytes that will be sent in a single round; defaults to 1 GB
   -bsc|--batchSizeCutoff=      : [Client] Once the total number of message payload bytes queued reaches (or exceeds) this limit, then the batch will be sent; defaults to 10 MB
-  -mms|--maxMessageSize=       : [Client] The maximum size (in bytes) of the message payload; must be a power of 2 (eg. 65536), and be at least 16; defaults to 64KB
+  -mms|--maxMessageSize=       : [Client] The maximum size (in bytes) of the message payload; must be a power of 2 (eg. 65536), and be at least 64; defaults to 64KB
   -n|--numOfRounds=            : [Client] The number of rounds (of size bytesPerRound) to work through; each round will use a [potentially] different message size; defaults to 1
-  -nds|--noDescendingSize      : [Client] Disables descending (halving) the message size after each round; instead, a random size [power of 2] between 16 and --maxMessageSize will be used
+  -nds|--noDescendingSize      : [Client] Disables descending (halving) the message size after each round; instead, a random size [power of 2] between 64 and --maxMessageSize will be used
   -fms|--fixedMessageSize      : [Client] All messages (in all rounds) will be of size --maxMessageSize; --noDescendingSize (if also supplied) will be ignored
   -eeb|--expectedEchoedBytes=  : [Client] The total number of "echoed" bytes expected to be received from the server when --bidirectional is specified; the client will report a "success" message when this number of bytes have been received
-  -cin|--clientInstanceName=   : [Server] The name of the instance that's acting in the 'Client' role for the test; only required when --role is 'Server' and --bidirectional is specified
   -nhc|--noHealthCheck         : [Server] Disables the periodic server health check (requested via an Impulse message)
-  -bd|--bidirectional          : [Server] Enables echoing the 'doWork' method call back to the client
+  -bd|--bidirectional          : [Server] Enables echoing the 'doWork' method call back to the client(s)
   -efb|--expectedFinalBytes=   : [Server] The total number of bytes expected to be received from all clients; the server will report a "success" message when this number of bytes have been received
 
