--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_CustomSerialParamNoRawParam_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_CustomSerialParamNoRawParam_GeneratedConsumerInterface.g.ts.cmp
@@ -62,6 +62,8 @@ Test when missing @param rawParams
 export namespace Test
 {
     /**
+     * *Note: "_Fork" methods should **only** be called from deterministic events.*
+     * 
      * Method to test custom serialized parameters.
      * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher (Darren Gehring [darrenge@microsoft.com]) for details of the serialization format.
      */
@@ -72,6 +74,8 @@ export namespace Test
     }
 
     /**
+     * *Note: "_Impulse" methods should **only** be called from non-deterministic events (UI events, timers, web service calls, etc).*
+     * 
      * Method to test custom serialized parameters.
      * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher (Darren Gehring [darrenge@microsoft.com]) for details of the serialization format.
      */
@@ -82,6 +86,8 @@ export namespace Test
     }
 
     /**
+     * *Note: "_EnqueueFork" methods should **only** be called from deterministic events, and will not be sent until IC.flushQueue() is called.*
+     * 
      * Method to test custom serialized parameters.
      * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher (Darren Gehring [darrenge@microsoft.com]) for details of the serialization format.
      */
@@ -92,6 +98,8 @@ export namespace Test
     }
 
     /**
+     * *Note: "_EnqueueImpulse" methods should **only** be called from non-deterministic events (UI events, timers, web service calls, etc), and will not be sent until IC.flushQueue() is called.*
+     * 
      * Method to test custom serialized parameters.
      * @param rawParams A custom serialization (byte array) of all required parameters. Contact the 'TS_CustomSerialParamNoRawParam_Generated' API publisher (Darren Gehring [darrenge@microsoft.com]) for details of the serialization format.
      */
