--- a/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_StaticMethod_GeneratedConsumerInterface.g.ts.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/JS_CodeGen_Cmp/TS_StaticMethod_GeneratedConsumerInterface.g.ts.cmp
@@ -58,7 +58,11 @@ export function getPostTimeoutInMs(): number
 
 export namespace StaticStuff
 {
-    /** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). Returns the post method callID.* */
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start(). Returns the post method callID.*
+     * 
+     * *Note: "_Post" methods should **only** be called from deterministic events.*
+     */
     export function hello_Post(callContextData: any, name: string): number
     {
         checkDestinationSet();
@@ -66,7 +70,11 @@ export namespace StaticStuff
         return (callID);
     }
 
-    /** *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().* */
+    /**
+     * *Note: The result (void) produced by this post method is received via the PostResultDispatcher provided to IC.start().*
+     * 
+     * *Note: "_PostByImpulse" methods should **only** be called from non-deterministic events (UI events, timers, web service calls, etc).*
+     */
     export function hello_PostByImpulse(callContextData: any, name: string): void
     {
         checkDestinationSet();
