--- a/AmbrosiaTest/AmbrosiaTest/Cmp/jsptishowhelptest_Core.cmp
+++ b/AmbrosiaTest/AmbrosiaTest/Cmp/jsptishowhelptest_Core.cmp
@@ -5,6 +5,7 @@
   -ir|--instanceRole=          : [Common] The role of this instance in the test ('Server', 'Client', or 'Combined'); defaults to 'Combined'
   -m|--memoryUsed=             : [Common] Optional "padding" (in bytes) used to simulate large checkpoints by being included in app state; defaults to 0
   -c|--autoContinue=           : [Common] Whether to continue automatically at startup (if true), or wait for the 'Enter' key (if false); defaults to true
+  -vp|--verifyPayload          : [Common] Enables verifying the message payload bytes (for 'doWork' on the server, and 'doWorkEcho' on the client); enabling this will decrease performance
   -sin|--serverInstanceName=   : [Client] The name of the instance that's acting in the 'Server' role for the test; only required when --role is 'Client'
   -bpr|--bytesPerRound=        : [Client] The total number of message payload bytes that will be sent in a single round; defaults to 1 GB
   -bsc|--batchSizeCutoff=      : [Client] Once the total number of message payload bytes queued reaches (or exceeds) this limit, then the batch will be sent; defaults to 10 MB
